--- a/.htaccess
+++ b/.htaccess
@@ -29,11 +29,11 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /
+RewriteBase /740.is/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteRule . /740.is/index.php [L]
 </IfModule>
 
 # END WordPress
